[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0" }
rand = "0.8.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-inspector-egui = "0.23.3"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
